--- a/JavaScript-Learning/Weather-App/index.html
+++ b/JavaScript-Learning/Weather-App/index.html
@@ -34,7 +34,8 @@
 
     </div>
 
-    <script src="scripts/forecast.js"></script>
+    <script src="scripts/forecast-class.js"></script>
+    <!-- <script src="scripts/forecast.js"></script> -->
     <script src="scripts/app.js"></script>
 </body>
 </html>
