database - firebase learning added

--- a/JavaScript-Learning/JS/index.html
+++ b/JavaScript-Learning/JS/index.html
@@ -3,12 +3,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <h1>Async JavaScript</h1>
+    <h1>JavaScript</h1>
+    
+    <div class="container my-5">
+        <h2>Recipes</h2>
+        <ul class="recipes">
+           
+        </ul>
+        <form>
+            <label for="recipe">Add a new Recipe</label>
+            <div class="input-group">
+                <input type="text" class="from-control" id="recipe" required>
+                <div class="input-group-append">
+                    <input type="submit" value="add" class="btn btn-outline-secondary">
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+
+
+
+
 
     <!-- <script src="promise.js"></script> -->
-    <script src="async-await.js"></script>
+    <!-- <script src="async-await.js"></script> -->
+   
+   
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-firestore.js"></script>
+
+    <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+        apiKey: "AIzaSyDop2iPtIr8IjJjR-7JZp09AX9cFRRjiSc",
+        authDomain: "learning-js-test.firebaseapp.com",
+        databaseURL: "https://learning-js-test.firebaseio.com",
+        projectId: "learning-js-test",
+        storageBucket: "learning-js-test.appspot.com",
+        messagingSenderId: "836967616785",
+        appId: "1:836967616785:web:ab2b31fcdafe1073e1fcb0",
+        measurementId: "G-6XR39146VT"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    </script>
+    <script src="database-firebase.js"></script>
 </body>
 </html>
