--- a/React/learning/public/index.html
+++ b/React/learning/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/a6fe168957.js" crossorigin="anonymous"></script>
-    <title>Welcome to Vinder</title>
+    <title>Welcome to Winder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
